Adicionado Script para: Cronometro, Palavras e Caraceteres

--- a/index/index.html
+++ b/index/index.html
@@ -19,7 +19,7 @@
 		<div class="body-container container">
 			
 			<div class="text-container">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<p id="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>
 
 			<div class="field-stats-container">
@@ -30,7 +30,7 @@
 
 				<div class="stats-container">
 					<ul class="stats">
-						<li><span id="seconds">10</span> Segundos</li>
+						<li class="seconds"><span id="seconds">10</span> Segundos</li>
 						<li><span id="words">0</span> Palavras</li>
 						<li><span id="charac">0</span> Caracteres</li>
 					</ul>
@@ -40,5 +40,7 @@
 
 		</div>
 
+		<script src="js/jquery.js"></script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
