Arrumado problema responsivo

--- a/index/index.html
+++ b/index/index.html
@@ -22,22 +22,24 @@
 				<p id="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>
 
-			<div class="field-stats-container">
+			<div class="row">
+				<div class="field-stats-container">
+					
+					<div class="field-container col-md-5">
+						<textarea id="field" rows="7"></textarea>
+					</div>
+
+					<div class="stats-container col-md-2">
+						<ul class="stats">
+							<li class="seconds"><span id="seconds">10</span> Segundos</li>
+							<li><span id="words">0</span> Palavras</li>
+							<li><span id="charac">0</span> Caracteres</li>
+						</ul>
+					</div>
 				
-				<div class="field-container">
-					<textarea id="field" rows="7" cols="50"></textarea>
 				</div>
 
-				<div class="stats-container">
-					<ul class="stats">
-						<li class="seconds"><span id="seconds">10</span> Segundos</li>
-						<li><span id="words">0</span> Palavras</li>
-						<li><span id="charac">0</span> Caracteres</li>
-					</ul>
-				</div>
-			
 			</div>
-
 		</div>
 
 		<script src="js/jquery.js"></script>
