Adicionado classes nos li's e adicionado linha ao final de tudo

--- a/index/index.html
+++ b/index/index.html
@@ -32,8 +32,8 @@
 					<div class="stats-container col-md-2">
 						<ul class="stats">
 							<li class="seconds"><span id="seconds">10</span> Segundos</li>
-							<li><span id="words">0</span> Palavras</li>
-							<li><span id="charac">0</span> Caracteres</li>
+							<li class="words"><span id="words">0</span> Palavras</li>
+							<li class="charac"><span id="charac">0</span> Caracteres</li>
 						</ul>
 					</div>
 				
