Adicionado Botão de Restart

--- a/index/index.html
+++ b/index/index.html
@@ -35,6 +35,7 @@
 							<li class="words"><span id="words">0</span> Palavras</li>
 							<li class="charac"><span id="charac">0</span> Caracteres</li>
 						</ul>
+						<button id="restart-button">Reiniciar</button>
 					</div>
 				
 				</div>
