--- a/index/index.html
+++ b/index/index.html
@@ -31,7 +31,7 @@
 
 					<div class="stats-container col-md-2">
 						<ul class="stats">
-							<li class="seconds"><span id="seconds">20</span> Segundos</li>
+							<li class="seconds"><span id="seconds">3</span> Segundos</li>
 							<li class="words"><span id="words">0</span> Palavras</li>
 							<li class="charac"><span id="charac">0</span> Caracteres</li>
 						</ul>
@@ -41,6 +41,58 @@
 				</div>
 
 			</div>
+
+      <div class="record-table col-md-12">
+        
+        <table class="table table-hover table-responsive">
+
+          <thead class="thead-dark">
+
+            <tr>
+              <th>Nome</th>
+              <th>No. de Palavras</th>
+            </tr>  
+
+          </thead>
+
+          <tbody>
+
+            <tr>
+              <td>Leandro</td>  
+              <td>1000 Palavras</td>
+            </tr>
+
+            <tr>
+              <td>Fernanda</td>
+              <td>1000 Palavras</td>
+            </tr>
+
+            <tr>
+              <td>Leandro</td>  
+              <td>1000 Palavras</td>
+            </tr>
+
+            <tr>
+              <td>Fernanda</td>
+              <td>1000 Palavras</td>
+            </tr>
+
+            <tr>
+              <td>Leandro</td>  
+              <td>1000 Palavras</td>
+            </tr>
+
+            <tr>
+              <td>Fernanda</td>
+              <td>1000 Palavras</td>
+            </tr>  
+
+          </tbody>
+
+        </table>
+
+      </div>
+
 		</div>
 
 		<script src="js/jquery.js"></script>
