Adicionado remover recorde

--- a/index/index.html
+++ b/index/index.html
@@ -51,41 +51,12 @@
             <tr>
               <th>Nome</th>
               <th>No. de Palavras</th>
+              <th>Remove</th>
             </tr>  
 
           </thead>
 
           <tbody>
-
-            <tr>
-              <td>Leandro</td>  
-              <td>1000 Palavras</td>
-            </tr>
-
-            <tr>
-              <td>Fernanda</td>
-              <td>1000 Palavras</td>
-            </tr>
-
-            <tr>
-              <td>Leandro</td>  
-              <td>1000 Palavras</td>
-            </tr>
-
-            <tr>
-              <td>Fernanda</td>
-              <td>1000 Palavras</td>
-            </tr>
-
-            <tr>
-              <td>Leandro</td>  
-              <td>1000 Palavras</td>
-            </tr>
-
-            <tr>
-              <td>Fernanda</td>
-              <td>1000 Palavras</td>
-            </tr>  
 
           </tbody>
 
