Adicionado botão placar e animações

--- a/index/index.html
+++ b/index/index.html
@@ -47,33 +47,41 @@
       <div class="buttons-container">
 
         <button id="restart-button" class="restart"><i class="fa fa-refresh" aria-hidden="true"></i></button>
+        <button id="scores-button" class="scores"><i class="fa fa-list-alt" aria-hidden="true"></i></button>
 
       </div>
 
       <div class="table-container">
 
-        <div class="table-bg"></div>
-        <table class="table table-responsive">
-          <thead>
+        <h2>Recordes</h2>
 
-            <tr>
-              <th>Nome</th>
-              <th>No. de Palavras</th>
-              <th>Remove</th>
-            </tr>  
+        <div class="table-wrapper">
+          
+          <div class="table-bg"></div>
+          <table class="table table-responsive">
+            <thead>
 
-          </thead>
-          <tbody>
+              <tr>
+                <th>Nome</th>
+                <th>No. de Palavras</th>
+                <th>Remove</th>
+              </tr>  
 
-            <tr>
-              <td>Leandro</td>
-              <td>2000 Palavras</td>
-              <td>-</i></td>
-            </tr>
+            </thead>
+            <tbody>
 
-          </tbody>
+              <tr>
+                <td>Leandro</td>
+                <td>2000 Palavras</td>
+                <td>-</i></td>
+              </tr>
 
-        </table>
+            </tbody>
+
+          </table>
+
+        </div>
+
       </div>
 
     </div>
