Adicionado log de erro, loading e Palavras/Minutos

--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,22 @@
 
         <h1>ALURATyper</h1>
 
+        <div class="loading"> <div></div> </div>
+
         <div class="text-container">
           
            <p id="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
-        </div>        
+        </div>    
+
+        <div class="error-container">
+
+          <div class="error-wrapper">
+            <div class="error-bg"></div>
+            <div class="wrapper"></div>
+          </div>
+
+        </div>    
 
         <div class="stats-container container">
 
@@ -27,7 +38,7 @@
 
               <li class="charac"> <span id="charac">0</span> Caracteres </li>
               <li class="seconds">
-                <span id="seconds">5</span>s 
+                <span id="seconds">25</span>s 
                 <i class="fa fa-hourglass-start seconds-icon" aria-hidden="true"></i>
               </li>
               <li class="words"> <span id="words">0</span> Palavras </li>
@@ -68,7 +79,7 @@
 
               <tr>
                 <th>Nome</th>
-                <th>No. de Palavras</th>
+                <th>Palavras / Minuto</th>
                 <th>Remove</th>
               </tr>  
 
@@ -77,7 +88,7 @@
 
               <tr>
                 <td>Leandro</td>
-                <td>2000 Palavras</td>
+                <td>2000 Palavras/min</td>
                 <td>-</i></td>
               </tr>
 
