Removido bugs do botão restart, e adicionado busca por ID de frase

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
         <div class="text-container">
           
-           <p id="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+           <p id="text">Alura, Cursos online de tecnologia que reinventam sua carreira.</p>
 
         </div>    
 
@@ -47,7 +47,7 @@
 
               <li class="charac"> <span id="charac">0</span> Caracteres </li>
               <li class="seconds">
-                <span id="seconds">25</span>s 
+                <span id="seconds">15</span>s 
                 <i class="fa fa-hourglass-start seconds-icon" aria-hidden="true"></i>
               </li>
               <li class="words"> <span id="words">0</span> Palavras </li>
@@ -64,7 +64,7 @@
 
     <div class="field-container container-fluid">
       
-      <textarea id="field"></textarea>
+      <textarea id="field" placeholder="ID do texto acima: 0"></textarea>
 
     </div>
 
@@ -75,6 +75,14 @@
       <button id="restart-button" class="restart"><i class="fa fa-refresh" aria-hidden="true"></i></button>
       <button id="scores-button" class="scores"><i class="fa fa-list-alt" aria-hidden="true"></i></button>
       <button id="random-button" class="random"><i class="fa fa-random" aria-hidden="true"></i></button>
+
+      <button id="find-button" class="find"><i class="fa fa-search" aria-hidden="true"></i></button>
+      <div class="find-field-wrapper">
+
+        <input type="number" id="find-field" class="find-field" placeholder="ID" autofocus>
+        <button id="find-confirm-button" class="find-confirm-button"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button>
+
+      </div>
 
     </div>
 
