Recordes são adicionados ao servidor

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 
               <li class="charac"> <span id="charac">0</span> Caracteres </li>
               <li class="seconds">
-                <span id="seconds">15</span>s 
+                <span id="seconds">1</span>s 
                 <i class="fa fa-hourglass-start seconds-icon" aria-hidden="true"></i>
               </li>
               <li class="words"> <span id="words">0</span> Palavras </li>
@@ -72,15 +72,16 @@
       
     <div class="buttons-container container">
 
+      <button id="save-button" class="save"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
       <button id="restart-button" class="restart"><i class="fa fa-refresh" aria-hidden="true"></i></button>
-      <button id="scores-button" class="scores"><i class="fa fa-list-alt" aria-hidden="true"></i></button>
+      <button id="scores-button" class="scores"><i class="fa fa-th-list" aria-hidden="true"></i></button>
       <button id="random-button" class="random"><i class="fa fa-random" aria-hidden="true"></i></button>
 
       <button id="find-button" class="find"><i class="fa fa-search" aria-hidden="true"></i></button>
       <div class="find-field-wrapper">
 
         <input type="number" id="find-field" class="find-field" placeholder="ID" autofocus>
-        <button id="find-confirm-button" class="find-confirm-button"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button>
+        <button id="find-confirm-button" class="find-confirm"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button>
 
       </div>
 
@@ -106,13 +107,6 @@
 
           </thead>
           <tbody>
-
-            <tr>
-              <td>Leandro</td>
-              <td>2000 Palavras/min</td>
-              <td>-</i></td>
-            </tr>
-
           </tbody>
 
         </table>
